2004-10-22  Atsushi Enomoto <atsushi@ximian.com>

	SequenceType.cs,
	XPath2Expression.cs,
	XPathSequence.cs,
	XQueryASTCompiler.cs,
	XQueryArithmeticOperator.cs,
	XQueryCliFunction.cs,
	XQueryCommandImpl.cs,
	XQueryComparisonOperator.cs,
	XQueryCompileContext.cs,
	XQueryCompileOptions.cs,
	XQueryContext.cs,
	XQueryConvert.cs,
	XQueryDefaultFunctionCall.cs, (not in use),
	XQueryExpression.cs,
	XQueryFunction.cs,
	XQueryFunctionCliImpl.cs,
	XQueryFunctionContextAttribute.cs,
	XQueryFunctionTable.cs,
	XQueryModuleProlog.cs,
	XQueryStaticContext.cs,
	XQueryTokenizer.cs,
	XmlQueryCompileException.cs,
	XmlQueryException.cs,
	XQueryParser.jay,
	skelton-2.0.cs: Initial Checkin (it is not compiled as yet).
